<resources>
    <string name="app_name">TableroTotal</string>
    <string name="title_home">Jugar</string>
    <string name="title_record">Historial</string>
    <string name="title_friends">Amigos</string>
    <string name="home_title">Play Online</string>
    <string name="username_label">Your nickname</string>
    <string name="button_join_game">Join Game</string>
    <string name="button_create_game">Create Game</string>
    <string name="no_connection_dialog_message">Device has no Internet connection. You must be connected to play online.</string>
    <string name="no_nickname_dialog_message">Please enter a nickname</string>
    <string name="game_code">Game Code</string>
    <string name="join_game">Join</string>
    <string name="no_code_dialog_message">Please enter a valid game code.</string>
    <string name="title_activity_rpsgame">Rock, paper, scissors</string>
    <string name="join_error_message">Could not join game. Please try again later.</string>
    <string name="new_game_error_message">Could not create game. Please try again later.</string>
    <string name="opponent">Opponent</string>
    <string name="newGame">New Game</string>
    <string name="go_back">Back</string>
    <string name="TicTacToe">Tic Tac Toe</string>
    <string name="RPS">Rock, Paper, Scissors</string>
    <string name="EvensAndNones">Odds and Evens</string>
    <string name="game_date">23/10/2023</string>
    <string name="game_title">Rock, Paper, Scissors</string>
    <string name="winner">Winner: Pouchie07</string>
    <string name="friend_name">leVeux98</string>
    <string name="last_connection">Last connection : 24/12/2022 22:32</string>
    <string name="button_leave">Leave game</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="game_round">Round:</string>
    <string name="round_selection">Rounds: %d</string>
    <string name="game_created">New game created!\\nRoom code: %s</string>
    <string name="waiting_room">Waiting Room</string>
    <string name="ready">Ready</string>
    <string name="time">The game will start in:</string>
    <string name="code">ABCD0O</string>
    <string name="seconds">60s</string>
    <string name="not_ready">Not Ready</string>
    <string name="not_enough_players">Not enough players for the match</string>
    <string translatable="false" name="default_web_client_id">98280711540-fsf31d7fpcc9vn3a1rnqglurq1bhp5qa.apps.googleusercontent.com</string>
    <string name="logout">Logout</string>
    <string name="confirm_btn">Yes</string>
    <string name="cancel_btn">Cancel</string>
    <string name="logout_text">Do you want to log out?</string>
    <string name="accept_btn">OK</string>
    <string name="welcome_title">Welcome to TableroTotal</string>
    <string name="text_username">Please choose a username:</string>
    <string name="username">Username</string>
    <string name="save_username">Save</string>
    <string name="points">0pts</string>
    <string name="Ranking">Ranking</string>
    <string name="Pares">Evens</string>
    <string name="Nones">Odds</string>
    <string name="winner_dialog">The winner is %s!</string>
    <string name="draw_dialog">It was a draw!</string>
    <string name="got_turn_message">It\'s your turn!</string>
    <string name="draw_message">It\'s a draw!</string>
    <string name="win_message">You win!</string>
    <string name="lose_message">You lost!</string>
    <string name="win_by_time_message">Your opponent ran out of time</string>
    <string name="lose_by_time_message">You ran out of time</string>
    <string name="win_by_resignation_message">Your opponent resigned</string>
    <string name="lose_by_resignation_message">You resigned</string>
    <string name="login_subtitle">Sign in to play:</string>
    <string name="connection_lost">Lost connection to server</string>
    <string name="login_error">Error while signing in. Please try again.</string>
    <string name="server_offline">Cannot connect to server. Please try again later.</string>
    <string name="device_offline">You need Internet connection to continue.</string>
    <string name="record_fetching_error">Error while fetching game record.</string>
    <string name="Empate">Draw between</string>
    <string name="Y">and</string>
    <string name="has_won_the_match">has won the match with</string>
    <string name="match_points">points</string>
    <string name="tie">tied by</string>
    <string name="exclamation">" "</string>
</resources>