<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".NewGameActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="88dp"
        android:text="@string/newGame"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="130dp"
        android:layout_height="51dp"
        android:layout_marginBottom="39dp"
        android:backgroundTint="@color/white"
        android:text="@string/Back"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tictactoeButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="50dp"
        android:background="#dbdbdb"
        android:text="@string/TicTacToe"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/RPSButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:background="#dbdbdb"
        android:text="@string/RPS"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tictactoeButton" />

    <Button
        android:id="@+id/EvensAndNonesButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"
        android:background="#dbdbdb"
        android:text="@string/EvensAndNones"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RPSButton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>